--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -10,34 +10,42 @@
    <link rel="stylesheet" href="{% static 'CSS/register.css' %}" />
 </head>
 
-<body>
-  <div class="register-page">
-  <div class="container">
+<section>
 
-    <form class="box">
-      <input id="signup" type="radio" name="form" value="signup" checked>
-      <label for="signup"></label>
-      <input id="login" type="radio" name="form" value="login">
-      <label for="login"></label>
-      <form method="post" action="{% url 'register-user' %}">
-        <div class="content">
-          <label for="username">Username</label>
-          <input type="text" class="form-control" id="username" name="username">
-          
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" name="password">
-          
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" name="email">
-        </div>
-        <button></button>
-      </div>
-    </form>
-    </div>
-  </div>
 
-</body>
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+        <form method="post" action="{% url 'register-user' %}">
+           {% csrf_token %}
+              <div class="row mb-3">
+                 <label for="username" class="col-sm-12 col-form-label">Username</label>
+                 <div class="col-sm-10">
+                   <input type="text" class="form-control" id="username" name="username">
+                 </div>
+              <div class="row mb-3">
+                <label for="email" class="col-sm-12 col-form-label">Email</label>
+                <div class="col-sm-10">
+                  <input type="email" class="form-control" id="email" name="email">
+                </div>
+              </div>
+              <div class="row mb-3">
+                <label for="password" class="col-sm-12 col-form-label">Password</label>
+                <div class="col-sm-10">
+                  <input type="password" class="form-control" id="password" name="password">
+                </div>
+              </div>
+              <div class="row mb-3">
+                 <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Create an Account</button>
+                  </div>
+               </div>
 
+               <div class="row mb-3">
+                 <div class="col-sm-10">
+                    <span>Already have a Account</span>
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                  </div>
+               </div>              
+            </form>
 
 
 
