--- a/oas-env/oas/templates/login.html
+++ b/oas-env/oas/templates/login.html
@@ -32,7 +32,7 @@
                 <div class="row mb-3">
                     <div class="col-sm-10">
                        <span>Don't have a Account</span>
-                       <a class="nav-link" ">Sign-up</a>
+                       <a class="nav-link" href="{% url 'register-user'%}">Sign-up</a>
                      </div>
                   </div>
                
