--- a/oas-env/oas/templates/header.html
+++ b/oas-env/oas/templates/header.html
@@ -87,7 +87,7 @@
                               <a class="nav-link" href="#">Store list</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Contact</a>
+                              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                             </li>
                           </ul>
                         </div>
