--- a/oas-env/oas/templates/contact.html
+++ b/oas-env/oas/templates/contact.html
@@ -12,6 +12,7 @@
             {% csrf_token %}
          <div class="container">
         <div class="row">
+            {{form}}
                 <h1>contact us</h1>
         </div>
         <div class="row">
