--- a/oas-env/oas/templates/about.html
+++ b/oas-env/oas/templates/about.html
@@ -39,12 +39,12 @@
 
     <div class="row row-big-card">
       <div class="cont">
-        <a href="#" class="card-link">
+        <a href="#" class="card-link" style="color: white;">
           <div class="card-inner">
-            <h3>We Work For Your Increadible Success</h3>
-            <h4>WHO WE ARE</h4>
+            <h3 style="color: white;">We Work For Your Increadible Success</h3>
+            <h4 style="color: white;">WHO WE ARE</h4>
             <div class="inner-text">
-              <p>
+              <p style="color: white;">
                 Auction sites present consumers with a thrilling, competitive
                 way to buy the goods and services they need most.But getting
                 your own auction site up and running has always required
