--- a/oas-env/oas/static/CSS/about.css
+++ b/oas-env/oas/static/CSS/about.css
@@ -352,6 +352,7 @@ a.card-link:hover span.cta-card {
     z-index: 1;
     display: flex;
     align-items: center;
+    color: white;
   }
 
   .inner-banner-content {
