--- a/oas-env/oas/templates/contact.html
+++ b/oas-env/oas/templates/contact.html
@@ -21,7 +21,7 @@
         <div class="row input-container">
                 <div class="col-xs-12">
                     <div class="styled-input wide">
-                        <input type="text" id="name"  name="contactname">
+                        <!--<input type="text" id="name"  name="contactname">-->
                         <label>{{form.name.label}}</label> 
                     </div>
                 </div>
