--- a/oas-env/oas/static/CSS/contact.css
+++ b/oas-env/oas/static/CSS/contact.css
@@ -128,3 +128,93 @@ input[type=checkbox]:checked + label {
   color: #f00;
   font-style: normal;
 }
+
+
+
+
+
+
+
+/* Input container styles */
+.styled-input {
+    position: relative;
+    margin: 1rem 0;
+    border-radius: 4px;
+}
+
+.styled-input label {
+    position: absolute;
+    top: 20px;  /* Adjust to match padding of input */
+    left: 20px;  /* Adjust to match padding of input */
+    color: #999;
+    font-size: 1rem;
+    transition: all 0.25s ease;
+    pointer-events: none;
+}
+
+/* Move label up when input is focused or has a value */
+input:focus ~ label,
+textarea:focus ~ label,
+input:not(:placeholder-shown) ~ label,
+textarea:not(:placeholder-shown) ~ label {
+    top: -10px;
+    left: 10px;
+    font-size: 0.75rem;
+    color: #999;
+}
+
+/* Input and textarea styles */
+input,
+textarea {
+    padding: 20px;
+    border: 0;
+    width: 100%;
+    font-size: 1rem;
+    background-color: #2d2d2d;
+    color: white;
+    border-radius: 4px;
+}
+
+input:focus,
+textarea:focus {
+    outline: 0;
+}
+
+/* Wide input fields */
+.styled-input.wide {
+    width: 100%;
+}
+
+/* Textarea specifics */
+textarea {
+    min-height: 10em;
+}
+
+/* Responsive adjustments */
+@media (min-width: 769px) {
+    .submit-btn {
+        width: auto; /* Back to original width on larger screens */
+    }
+}
+
+/* Submit button styles */
+.submit-btn {
+    padding: 10px 20px;
+    border-radius: 60px;
+    display: inline-block;
+    background-color: #4b8cfb;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.06),
+                0 2px 10px 0 rgba(0,0,0,0.07);
+    transition: all 300ms ease;
+    width: 100%; /* Full-width on mobile */
+    text-align: center;
+}
+
+.submit-btn:hover {
+    transform: translateY(1px);
+    box-shadow: 0 1px 1px 0 rgba(0,0,0,0.10),
+                0 1px 1px 0 rgba(0,0,0,0.09);
+}
