--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -366,6 +366,71 @@ body{
 
 
 
+.bid-cards .card {
+  position: relative;
+  overflow: hidden;
+  transition: all 0.3s;
+  margin-top: 30px;
+  background-color: black;
+  color: white;
+}
+
+.bid-cards .card:hover {
+  transform: scale(1.15);
+  border-bottom: 3px solid;
+  border-color: white;
+}
+
+.timer-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.bid-cards .card:hover .timer-overlay {
+  opacity: 1;
+}
+
+.timer-overlay .count {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.timer-overlay .co {
+  display: inline-block;
+  width: 80px;
+  border: 2px solid white;
+  margin: 0 10px;
+  font-size: 0.8rem;
+  padding: 5px 10px;
+}
+
+.timer-overlay .co span {
+  font-size: 1.5rem;
+  margin-top: 3px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
