--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -391,7 +391,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 0;
+  opacity: 1; /* Set to 1 to always be visible */
   transition: opacity 0.3s;
 }
 
