--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -124,19 +124,19 @@
               <div class="timer-overlay">
                 <div class="count">
                   <div class="co">
-                    <span id="days">00</span>
+                    <span id="days1">00</span>
                     DAYS
                   </div>
                   <div class="co">
-                    <span id="hours">00</span>
+                    <span id="hours1">00</span>
                     HOURS
                   </div>
                   <div class="co">
-                    <span id="minutes">00</span>
+                    <span id="minutes1">00</span>
                     MINUTES
                   </div>
                   <div class="co">
-                    <span id="seconds">00</span>
+                    <span id="seconds1">00</span>
                     SECONDS
                   </div>
                 </div>
