--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -365,6 +365,7 @@ body{
 
 
 
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 
 .bid-cards .card {
   position: relative;
