--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -413,7 +413,7 @@ body{
   margin: 0 10px;
   font-size: 0.8rem;
   padding: 5px 10px;
-  box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.3), 0 6px 20px rgba(0, 0, 0, 0.19); 
+  box-shadow: inset 0 4px 8px rgba(0, 0, 0, 0.6), inset 0 6px 12px rgba(0, 0, 0, 0.5);
 }
 
 .timer-overlay .co span {
