--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -388,11 +388,10 @@ body{
   left: 0;
   width: 100%;
   height: 100%;
-  /*background: rgba(0, 0, 0, 0.5);*/
   display: flex;
   justify-content: center;
   align-items: center;
-  opacity: 1; /* Set to 1 to always be visible */
+  opacity: 1; 
   transition: opacity 0.3s;
 }
 
