--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -95,8 +95,7 @@
           {% if product.category == '1st-Auction' %}
           <div class="col-md-4">
             <div class="card">
-              <div class="timer-overlay" id="timer-{{ forloop.counter }}" data-countdown="{{ product.countdown_date }}">
-                <div class="count">
+              <div class="timer-overlay" data-countdown="2024-08-30T15:00:00"></div><div class="count">
                   <div class="co">
                     <span class="days">00</span> DAYS
                   </div>
