--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -132,14 +132,6 @@
 
 
 
-
-
-
-
-
-
-
-
     <div class="cards-5">
       <div class="container">
         <div class="product-banners">
@@ -210,6 +202,35 @@
 </div><!-- /.container -->
    </div><!-- /.second-strip-inner-content -->
  </div><!-- /.second-strip -->
+
+
+
+
+ <div class="up-auction">
+  <div class="container">
+    <div class="row">
+      {% for product in products %} 
+      {% if product.category == 'upcoming-auction' %}
+      <div class="col-md-4">
+        <div class="card">
+          <img src="media/{{product.image}}" class="card-img-top"alt="..."/>
+          <div class="card-body">
+            <p>Acessories</p>
+            <h5 class="card-title">{{product.title}}</h5>
+            <p class="card-text"><b>{{product.description}}</b></p>
+            <a href="#" class="btn btn-success">BUY NOW</a>
+            <i class="bi bi-share-fill justify-content-end"></i>
+          </div>
+        </div>
+      </div>
+      {% endif %} 
+      {% endfor %}
+    </div>
+    <!-- /.row -->
+  </div>
+  <!-- /.container -->
+</div>
+<!-- /.up-auction -->
 
 
 
