--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -964,3 +964,9 @@ transition:all 0.5s ease;
   background-color: black;
   color: white;
 }
+.up-auction .card:hover{
+  transform: scale(1.15);
+  border-bottom: 3px solid;
+  border-color: white;
+  
+}
