--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -174,7 +174,7 @@
 <div class="second-strip">
   <div class="container">
    <div class="second-strip-inner">
-    <h1>Why Choose Us </h1>
+    <h1 style="color: white;">Why Choose Us </h1>
     <p style="color: grey;">Explore Our Completed Services! Consectetur adipiscing elitt elit tellus,<br> luctus pulvinar dapibus leoconsectetur luctus nec.</p>
   </div><!-- /.container --> 
   </div> <!-- /.second-strip-inner -->
@@ -202,6 +202,23 @@
 </div><!-- /.container -->
    </div><!-- /.second-strip-inner-content -->
  </div><!-- /.second-strip -->
+
+
+
+
+
+ <div class="third-strip">
+  <div class="container">
+   <div class="third-strip-inner">
+    <h1>Why Choose Us </h1>
+    <p style="color: white;">Explore Our Completed Services! Consectetur adipiscing elitt elit tellus,<br> luctus pulvinar dapibus leoconsectetur luctus nec.</p>
+  </div><!-- /.container --> 
+  </div> <!-- /.Third-strip-inner -->
+  </div>
+
+
+
+
 
 
 
