--- a/oas-env/oas/static/CSS/styleapp.css
+++ b/oas-env/oas/static/CSS/styleapp.css
@@ -956,7 +956,11 @@ transition:all 0.5s ease;
 
 
 
+.third-strip-inner{
+  margin-top: 50px;
+  text-align: center;
 
+}
 
 .up-auction .card{
   transition: all 0.3s;
