--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -210,8 +210,8 @@
  <div class="third-strip">
   <div class="container">
    <div class="third-strip-inner">
-    <h1>Why Choose Us </h1>
-    <p style="color: white;">Explore Our Completed Services! Consectetur adipiscing elitt elit tellus,<br> luctus pulvinar dapibus leoconsectetur luctus nec.</p>
+    <h1 style="color: white;">Up Comming Auction</h1>
+    <p style="color: white;">Explore on the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success and future growth.</p>
   </div><!-- /.container --> 
   </div> <!-- /.Third-strip-inner -->
   </div>
@@ -235,7 +235,7 @@
             <p>Acessories</p>
             <h5 class="card-title">{{product.title}}</h5>
             <p class="card-text"><b>{{product.description}}</b></p>
-            <a href="#" class="btn btn-success">BUY NOW</a>
+            <a href="{% url 'cart' %}" class="btn btn-success">BUY NOW</a>
             <i class="bi bi-share-fill justify-content-end"></i>
           </div>
         </div>
