--- a/oas-env/oas/templates/index.html
+++ b/oas-env/oas/templates/index.html
@@ -211,7 +211,7 @@
   <div class="container">
    <div class="third-strip-inner">
     <h1 style="color: white;">Up Comming Auction</h1>
-    <p style="color: white;">Explore on the world's best & largest Bidding marketplace with our beautiful Bidding products. We want to be a part of your smile, success and future growth.</p>
+    <p style="color: white;">Explore on the world's best & largest Bidding marketplace with our beautiful Bidding<br>products. We want to be a part of your smile, success and future growth.</p>
   </div><!-- /.container --> 
   </div> <!-- /.Third-strip-inner -->
   </div>
