--- a/oas-env/oas/templates/register.html
+++ b/oas-env/oas/templates/register.html
@@ -13,7 +13,7 @@
 <section>
 
 
-  <!-- <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+  <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
         <form method="post" action="{% url 'register-user' %}">
            {% csrf_token %}
               <div class="row mb-3">
@@ -59,7 +59,6 @@
                       </svg>
                   </div>
          </section>
- -->
 
 
 
