--- a/oas-env/oas/static/CSS/contact.css
+++ b/oas-env/oas/static/CSS/contact.css
@@ -9,6 +9,7 @@
     padding-right: 15px;
 }
 
+
 .contact-form .container {
     display: flex;
     flex-direction: column;
@@ -18,7 +19,7 @@
 .contact-form h1 {
     font-family: 'Poppins', sans-serif, 'arial';
     font-weight: 600;
-    font-size: 48px; /* Reduced for better display on mobile */
+    font-size: 48px;
     color: white;
     text-align: center;
     margin-bottom: 20px;
@@ -30,21 +31,19 @@
     font-size: 18px; /* Slightly smaller font */
     color: #9b9b9b;
     line-height: 1.5;
+    text-align: center;
 }
 
 /* ///// inputs /////*/
 
 input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
-    font-size: 0.75em;
     color: #999;
-    top: -5px;
-    -webkit-transition: all 0.225s ease;
-    transition: all 0.225s ease;
+    top: -10px;
+    left: 20px;
+    font-size: 0.75rem;
 }
 
 .styled-input {
-    float: left;
-    width: 100%;
     margin: 1rem 0;
     position: relative;
     border-radius: 4px;
@@ -54,8 +53,9 @@ input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid
     color: #999;
     padding: 1.3rem 30px 1rem 30px;
     position: absolute;
-    top: 10px;
-    left: 0;
+    top: 20px;
+    left: 20px;
+    font-size: 1rem;
     -webkit-transition: all 0.25s ease;
     transition: all 0.25s ease;
     pointer-events: none;
